2007-03-28	Joel Sherrill <joel@OARcorp.com>

	PR 1232/bsps
	* bsppost.c: It should not be a fatal error to not have a console.

2007-02-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* vmeUniverse/vmeUniverse.c: Use size_t for sizes.

2007-01-29	Till Straumann <strauman@slac.stanford.edu>

	* vmeUniverse/README.porting, vmeUniverse/README.universe:
	updated, added more information for BSP implementors.

	* vmeUniverse/VMEDMA.h (added): VME DMA API definition.

	* vmeUniverse/bspVmeDmaList.h (added), vmeUniverse/bspVmeDmaListP.h (added),
	* vmeUniverse/bspVmeDmaList.c (added):
	Driver-independent code for linked-list DMA (public + private headers,
	implementation).

	* vmeUniverse/vmeUniverseDMA.h (added), vmeUniverse/vmeTsi148DMA.h (added):
	interface to new DMA features of drivers.

	* vmeUniverse/vme_amd_defs.h: Added definition for data-width
	hint bits (VME_MODE_DBWxx).


	* vmeUniverse/vmeTsi148.c: added DMA support. Added support for
	data-width hint/modifier bits.

	* vmeUniverse/vmeUniverse.c, vmeUniverse/vmeUniverse.h:
	Added support for data-width hint/modifier bits. 
	Added support for xxx_BLT, xxx_MBLT address modifiers.
	Restrict DBW to 32 in non-MBLT modes (except single-beat;
	a comment is in README.universe). Updated DMA support to
	implement new VMEDMA.h API. Added support for non-incrementing
	VME addresses. Restrict data width to 32 for single-beat AMs
	when the universe would use MBLT for DMA.

2007-01-19	Till Straumann <strauman@slac.stanford.edu>

	* Makefile.am, vmeUniverse/VME.h:
	moved VME.h from libbsp/powerpc/shared/vme to
	libbsp/shared/vmeUniverse; eventually, this (and other)
	VME API headers should migrate to cpukit.

2007-01-16	Till Straumann <strauman@slac.stanford.edu>

	* vmeUniverse/vmeTsi148.c, vmeUniverse/vmeTsi148.h,
	vmeUniverse/vmeUniverse.c, vmeUniverse/vmeUniverse.h,
	vmeUniverse/vme_am_defs.h:
	Added SLAC/Stanford Authorship Note / Copyright + Liability Disclaimer.

2006-12-13	Till Straumann <strauman@slac.stanford.edu>
