@@ -1,3 +1,7 @@
+2007-04-02	Joel Sherrill <joel@OARcorp.com>
+
+	* dummy_printk_support.c: New file.
+
 2007-03-28	Joel Sherrill <joel@OARcorp.com>
 
 	PR 1232/bsps
